# cowork-ami

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  docker-compose.yml  setup.cfg
.github/workflows/: codeql-analysis.yml  quality.yml
src/cowork/: .env.dist  manage.py
src/cowork/cowork/: asgi.py  settings.py  urls.py  wsgi.py
src/cowork/tests/: test_dummy.py
src/survey/: manage.py
src/survey/apps/cowork/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/survey/apps/cowork/migrations/: 0001_initial.py  0002_auto_20210322_1952.py
src/survey/apps/cowork/templates/cowork/: application_form.html
src/survey/survey/: settings.py  urls.py
