[metadata]
name = cowork-ami
version = 0.0.1
description =  Appel à Manifestation d'Intérêt pour la création d'un espace de co-working sur la communauté de communes Mond'Arverne (Puy de Dôme, France)
long_description = file:README.md
long_description_content_type = text/markdown
author = Julien Maupetit
author_email = julien@maupetit.net
url = https://github.com/jmaupetit/cowork-ami
license = MIT
keywords = Django
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    Django==3.1.7
    django-environ==0.4.5
    psycopg2-binary==2.8.6
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.0
    black==20.8b1
    factory-boy==3.2.0
    flake8==3.8.4
    isort==5.7.0
    pylint==2.6.0
    pylint-django==2.4.2
    pytest==6.2.2
    pytest-cov==2.11.1
    pytest-django==4.1.0
