[metadata]
name = survey
version = 0.0.1
description = Survey application for Django devs
long_description = file:README.md
long_description_content_type = text/markdown
author = Julien Maupetit
author_email = julien@maupetit.net
url = https://github.com/jmaupetit/survey
license = MIT
keywords = Django
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
install_requires =
    Django==3.1.7
    django-environ==0.4.5
    psycopg2-binary==2.8.6
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.0
    black==20.8b1
    factory-boy==3.2.0
    flake8==3.8.4
    isort==5.7.0
    pylint==2.6.0
    pylint-django==2.4.2
    pytest==6.2.2
    pytest-cov==2.11.1
    pytest-django==4.1.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    dist,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_django=django
known_survey=survey
include_trailing_comma=True
line_length=88
multi_line_output=3
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,SURVEY,FIRSTPARTY,LOCALFOLDER
skip_glob=node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    src/survey
